--- a/EcoAula-front/index.html
+++ b/EcoAula-front/index.html
@@ -36,25 +36,7 @@
     }
   </script>
   <style>
-    .role-card:has(input:checked) {
-      border-color: #1a355b;
-      background-color: rgba(26, 53, 91, 0.05);
-    }
-
-    .type-card input:checked+div {
-      border-color: #1a365d;
-      background-color: rgba(26, 54, 93, 0.05);
-      box-shadow: 0 0 0 1px #1a365d;
-    }
-
-    .type-card input:checked+div .icon-box {
-      background-color: #1a365d;
-      color: white;
-    }
-
-    .type-card input:checked+div .check-indicator {
-      display: block;
-    }
+    /* Global styles only if needed */
   </style>
 </head>
 
